# Voxels

./: .gitignore  launch.json
build-rel/: voxels
res/: textures.xcf
res/shaders/: mainCube.frag  mainCube.vert
src/: CMakeLists.txt
src/include/VoxelGame/: Block.h  BlockSideInfo.h  Chunk.h  GameApp.h  GameContext.h  Layer.h  Map.h  Player.h
src/include/VoxelGame/layers/: GameLayer.h  HudLayer.h
src/include/engine/: Application.h  Base.h  Camera.h  DeltaVariable.h  Mesh.h  RawMesh.h  Vertex.h
src/include/glcore/: Shader.h  Texture.h  Window.h
src/src/: main.cpp
src/src/VoxelGame/: Block.cpp  BlockSideInfo.cpp  Chunk.cpp  GameApp.cpp  Map.cpp  Player.cpp
src/src/VoxelGame/layers/: GameLayer.cpp  HudLayer.cpp
src/src/engine/: Application.cpp  Camera.cpp  Mesh.cpp  RawMesh.cpp
src/src/glcore/: Shader.cpp  Texture.cpp  Window.cpp
